setup/collector/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dep
  labels:
    app: myapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      nodeSelector: {
        role: worker
      }
