setup/collector/base/ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - host: isolation.zerok.ai
    http:
      paths:
      - backend:
          service:
            name: svc
            port: 
              number: 80
        path: /
        pathType: Prefix
